demos/httpd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-demo
  template:
    metadata:
      labels:
        app: httpd-demo
    spec:
      containers:
      - name: httpd
        image: httpd:2.4
        ports:
        - containerPort: 8080
