demos/httpd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-demo
spec:
  selector:
    app: httpd-demo
  ports:
  - port: 8080
    targetPort: 8080
