demos/httpd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpd-demo
spec:
  to:
    kind: Service
    name: httpd-demo
  port:
    targetPort: 8080
